--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>this site was created by me. it uses data from mapbox & weatherstack.</p>
         <img class="portrait" src="/img/donald.jpeg">
     </div>
     {{>footer}}
